# iris-ml-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py  ml_model.py  router.py  schemas.py
