[project]
name = "iris-ml-api"
version = "0.1.0"
description = "Iris ML API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
